[package]
name = "submit-runtime-upgrade"
version = "0.1.0"
edition = "2021"

[dependencies]
subxt = "0.30.0"
subxt-macro = "0.30.0"
subxt-metadata = "0.30.0"
tokio = { version = "1.29.1", features = ["full"] }
subxt-signer = { version = "0.30.0", features = ["subxt"] }
libuptest = { version = "0.1.2", git = "https://github.com/uptest-sc/uptest/" }

